--- a/Nutrition-Tracker-User-Service/pom.xml
+++ b/Nutrition-Tracker-User-Service/pom.xml
@@ -109,7 +109,11 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
